--- a/proxybench-master/panel.html
+++ b/proxybench-master/panel.html
@@ -41,14 +41,12 @@
 					  </tr>
 					  <tr>
 					    <td width="50%">
-					        <div id="editor">
-		                		<script src="edit.js"></script>
-							</div>
+					        <div id="editor"></div>
+               		
 					    </td>
 					    <td width="50%">
-					        <div id="editor1">
-								<script src="edit1.js"></script>
-							</div>
+					        <div id="editor1"></div>
+									
 					    </td>
 					  </tr>
 					</table>		
